...
                  key: const Key('nav_home'),
                  icon: const Icon(Icons.foundation_outlined),
                  selectedIcon: const Icon(Icons.foundation),
                  label: AppLocalizations.getNavMenuText('home', appLanguage),
                ),
                NavigationDestination(
                  key: const Key('nav_read'),
                  icon: const Icon(Icons.auto_stories_outlined),
                  selectedIcon: const Icon(Icons.auto_stories),
                  label: AppLocalizations.getNavMenuText('read', appLanguage),
                ),
                NavigationDestination(
                  key: const Key('nav_search'),
                  icon: const Icon(Icons.travel_explore_outlined),
                  selectedIcon: const Icon(Icons.travel_explore),
                  label: AppLocalizations.getNavMenuText('search', appLanguage),
                ),
                NavigationDestination(
                  key: const Key('nav_explore'),
...
